feature(auth): add user authentification for api
