# src/docs/apidocs.json
@@ -1622,5 +1622,18 @@
         }
       }
     }
-  }
+  },
+  "components": {
+    "securitySchemes": {
+      "BasicAuth": {
+        "type": "http",
+        "scheme": "basic"
+      }
+    }
+  },
+  "security": [
+    {
+      "BasicAuth": []
+    }
+  ]
 }
